<resources>
    <string name="app_name">Big Font</string>
    <string name="sologan">Improve your mobile User experience</string>
    <string name="dialog_choose_title">Are you sure to change settings?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="txt_changed">Change setting successfully!\n You must restart your device for big font</string>
    <string name="btn_restart_later">Restart later</string>
    <string name="text_content_item_font">ABC abc 123 (22sp)</string>
    <string name="text_content_item_font2">ABC abc 123 (18sp)</string>
    <string name="title_item_font_1x">100%\nDefault (1x)</string>
    <string name="title_item_font_12x">120%\n(1.2x)</string>
    <string name="title_item_font_14x">140%\n(1.4x)</string>
    <string name="title_item_font_16x">160%\n(1.6x)</string>
    <string name="title_item_font_18x">180%\n(1.8x)</string>
    <string name="title_item_font_20x">200%\n(2x)</string>
    <string name="download">Download</string>
    <string name="txt_btn_selected">Used</string>
    <string name="title_item_font_22x">220% - (2.2x)</string>
    <string name="title_item_font_24x">240% - (2.4x)</string>
    <string name="txt_noti_restart_device">Please restart your device to complete this change and have big font size on your phone!</string>
    <string name="txt_btn_unselected">Apply</string>
    <string name="requestPermission">You need grant permission to write settings to able big font</string>
    <string name="facebook_app_id" translatable="false">207364999832740</string>
    <string name="cp_hot_apps">Download more apps</string>
    <string name="txt_rate">Please rate 5 star for me!!!</string>
    <string name="content_noti">Click to change your font size?</string>
    <string name="title_noti">Font size using:</string>
    <string name="lbl_later">Later</string>
    <string name="rate_us">Rate 5 stars for us if you like</string>
    <string name="lbl_rate">Rate Us</string>
    <string name="sms_thank_you_rate">Thank you very much !</string>
    <string name="create_custem_font_size">Create Custom Font Size</string>
    <string name="reset_custem_font_size_to_default">Return to default font size</string>
    <string name="apply_new_font">Are you sure apply new font right now?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="font_size_preview">Font size preview:</string>
    <string name="create_font_size">Create font size</string>
    <string name="apply_now">Apply now</string>
    <string name="adjust_font_size">ADJUST FONT SIZE:</string>
    <string name="create_new_font">Are you sure to create new font size?</string>
    <string name="toast_apply">Please restart your devices</string>
    <string name="create_font_size_text_preview">Hello</string>
    <string name="notify_setting">On/Off notification on status bar</string>
    <string name="RestartLaterScreen_Bottom_NativeAds_High300" translatable="false">ads</string>
    <string name="MainScreen_Footer_NativeAds_High300" translatable="false">ads</string>
</resources>
