<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_apply_custem_font"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Display1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_font"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel_create_font"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_apply_create_font_size"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/cancel"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/btn_yes_create_font"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_apply_create_font_size"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/yes"
            android:textSize="35sp" />
    </LinearLayout>
</LinearLayout>