<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_btn_apply_create_font_size"
    android:orientation="vertical">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/dialog_choose_title"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_dialog"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_yes"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_dialog"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/btn_ok"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>