<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/shape_item_font"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/item_font_view_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/text_content_item_font"
                android:textColor="@color/colorAccent"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_font_view_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/text_content_item_font2"
                android:textColor="@color/colorAccent"
                android:textSize="12dp" />

            <Button
                android:id="@+id/item_font_btn_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/shape_btn_item_font_unselect"
                android:padding="5dp"
                android:text="@string/txt_btn_selected"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/shape_title_font"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_font_title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|top"
                android:padding="4dp"
                android:text="100%\n Mặc định (1x)"
                android:textColor="@color/colorBlack" />

            <ImageView
                android:id="@+id/item_font_im_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done_light_green_500_36dp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>